@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="1.1.5" name="ALPHA Player" provider-name="Twilight0">
+<addon id="plugin.video.alphatv.gr" version="1.2.0" name="ALPHA Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
-		<import addon="script.module.tulip" version="1.2.6" />
+		<import addon="script.module.tulip" version="1.2.9" />
 		<import addon="plugin.video.youtube" version="5.4.0" optional="true" />
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
@@ -20,6 +20,11 @@
 		<website>http://www.alphatv.gr/</website>
         <size>598620</size>
 		<news>
+[B]1.2.0[/B]
+- Added Hebrew translation (Eng2Heb@github)
+- Added new try-except block into vod resolver due to new website api
+- Cosmetics
+
 [B]1.1.5[/B]
 - Added spoofed UA for live streams
 
