@@ -1,3 +1,8 @@
+[B]1.2.0[/B]
+- Added Hebrew translation (Eng2Heb@github)
+- Added new try-except block into vod resolver due to new website api
+- Cosmetics
+
 [B]1.1.5[/B]
 - Added spoofed UA for live streams
 
